# cs252_project_haskellFaceted

./: .gitignore  10_19_basicUse.hs  finalReport.tex  installLibs.sh  presentation.odp  proposal.tex  readme.md
codeTest/: test.cabal
codeTest/src/: Main.hs
codeTest/src/Faceted/: FIO.hs  Internal.hs  Pure.hs
