name:              test
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2
data-files:        
                   src/Faceted/FHandle.hs, 
                   src/Faceted/FIO.hs, 
                   src/Faceted/FIORef.hs, 
                   src/Faceted/Internal.hs, 
                   src/Faceted/Pure.hs, 
                   src/Main.hs

executable test
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base
